# METIS

./: CMakeLists.txt
conf/: gkbuild.cmake
include/: metis.h
libmetis/: CMakeLists.txt  metislib.h
